2011-04-11  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: split yacc6.test, for better separation and coverage
	* tests/yacc6.test: Test removed, its content extended and split
	into ...
	* tests/yacc-auxdir.test, tests/yacc-depend.test,
	tests/yacc-line.test: ... these new tests.
	* tests/yacc-depend2.test: New test, exposes the failure that
	FreeBSD used to encounter in yacc6.test.
	* tests/Makefile.am (TESTS): Update.

2011-04-11  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: do not uselessly require GNU make or gcc in a few tests
	* tests/lex3.test: Remove gcc from requirements, as any working C
	compiler should be ok.  Consequently, do not clobber user CFLAGS.
	Also, remove GNUmake from requirements; it was added (see commit
	`Release-1-8-103-g0d2f592') because this test fails with FreeBSD
	make due to VPATH issues -- but so do many other yacc-related and
	lex-related tests currently, and requiring GNU make in all of
	them would unacceptably reduce coverage.
	* tests/lexvpath.test: Remove gcc from requirements, as any
	working C compiler should be ok.
	* tests/yacc4.test: Likewise.
	* tests/yacc8.test: Likewise.
	* tests/lex5.test: Likewise.  Also, do not require anymore GNU
	make; to compensate, explicitly call "$MAKE Makefile" to update
	the out-of-date Makefile if $MAKE is not GNU make.

2011-04-12  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: fix spurious failure in test 'yacc-d-cxx.test'
	* tests/yacc-d-cxx.test: Create ylwrap script before calling
	automake for the first time, so that the script gets correctly
	distributed.  Add checks verifying it indeed is.

2011-04-12  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests cosmetics: remove redundant definitions of variable $tab
	* tests/yacc-d-basic.test ($tab): Remove definition: it's already
	defined in `tests/defs'.
	* tests/yacc-d-cxx.test: Likewise.

2011-04-12  Stefano Lattarini  <stefano.lattarini@gmail.com>
