@@ -48,7 +48,6 @@ bar_SOURCES = bar.y main.c
 END
 
 $ACLOCAL
-$AUTOCONF
 $AUTOMAKE -a
 test -f aux1/ylwrap
 test ! -f ylwrap
