@@ -98,7 +98,11 @@ for vpath in : false; do
   ls -l . sub sub/dir
   $FGREP '.y' $c_outputs
 
+  # Adjusted "#line" should not contain reference to the builddir.
   $EGREP '#.*line.*(build|\.\.).*\.y' $c_outputs && Exit 1
+  # Adjusted "#line" should not contain reference to the default
+  # output file names, e.g., `y.tab.c' and `y.tab.h'.
+  $EGREP '#.*line.*y\.tab\.' $c_outputs && Exit 1
   # Don't be excessively strict in grepping, to avoid spurious failures.
   grep '#.*line.*zardoz\.y' zardoz.c
   grep '#.*line.*quux\.y' bar-quux.c
