@@ -1,3 +1,12 @@
+2011-04-14  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
+	tests: minor improvements to a couple of yacc tests
+	* tests/yacc-auxdir.test: Avoid running autoconf, it's not
+	needed.
+	* tests/yacc-line.test: Also check that the yacc-generated C
+	and header files do not contain "#line" directives referencing
+	`y.tab.c' or `y.tab.h'.  Add a couple of explicative comments.
+
 2011-04-11  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
 	tests: split yacc6.test, for better separation and coverage
